# a2a-mcp-fun

./: README.md  docker-compose.yaml
client/: README.md  pyproject.toml
client/src/client/: __init__.py  a2a_agent_mcp_tool.py  client.py
database-agent/: pyproject.toml
database-agent/src/database_agent/: __init__.py
ollama/: dockerfile.ollama  start_ollama.sh
weather-agent/: LICENSE  README.md  dockerfile.a2a-agent-tool  dockerfile.weather-agent  pyproject.toml
weather-agent/src/weather_agent/: __init__.py  a2a_agent_mcp_tool.py  agent.py  task_manager.py  weather_mcp_server.py
