[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kaaquist", email = "kasperaaquist@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncclick>=8.1.8",
    "google-a2a",
]

[project.scripts]
client = "client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
google-a2a = { git = "https://github.com/djsamseng/A2A", subdirectory = "samples/python", branch = "prefixPythonPackage" }
