[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kaaquist", email = "kasperaaquist@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncclick>=8.1.8",
    "fastmcp==2.5.1",
    "langchain-mcp-adapters>=0.1.1",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.5",
    "langgraph-supervisor>=0.0.25",
    "mcp>=1.9.1",
    "chainlit>=2.5.5",
    "langchain>=0.3.25",
]

[project.scripts]
client = "client.client:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
