[project]
name = "database-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kaaquist", email = "kasperaaquist@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
database-agent = "database_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
