[project]
name = "weather-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kaaquist", email = "kasperaaquist@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "google-a2a",
    "langchain>=0.3.24",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.4.0",
]

[project.scripts]
weather-agent = "weather_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
google-a2a = { git = "https://github.com/djsamseng/A2A", subdirectory = "samples/python", branch = "prefixPythonPackage" }
